--- a/ManejoPresupuesto/Views/Transacciones/Mensual.cshtml
+++ b/ManejoPresupuesto/Views/Transacciones/Mensual.cshtml
@@ -42,7 +42,7 @@
                 <td>
                     <a style="text-decoration:none;" asp-action="Index"
                         asp-route-año="@Model.Año" asp-route-mes="@transaccionPorMes.Mes">
-                        @transaccionPorMes.FechaReferencia.ToString("MMMM");
+                        @transaccionPorMes.FechaReferencia.ToString("MMMM")
                     </a>
                 </td>
                 <td class="activo" style="text-align: right">@transaccionPorMes.Ingreso</td>
